# examples

./: .gitlab-ci.yml  .pre-commit-config.yaml  README.md
feast/: README.md  feast-cr.yaml  feast-istio-workaround.yaml  feast-notebook-rbac.yaml  feast_example.ipynb  feature_store.yaml  features.py  featurestore.yaml  redis-cr.yaml
mlflow/: mlflow-kfp-example.ipynb
mlflow/mobile-price-classification/: mlflow-mobile-price-classification.ipynb
notebooks/mnist-vae/: README.md  pyproject.toml
notebooks/mobile-price-classification/: mobile-price-classifications.ipynb
pipelines/lightweight-components/: mobile-price-classifications.ipynb
pipelines/lightweight-python-package/: pipeline.py  requirements.txt
pipelines/minimal-container-components/: README.md  requirements.txt
pipelines/pipe-fiction/: README.md
pipelines/plain-python-reference/: mobile-price-classifications.ipynb
r-studio/iris-classification/: iris-classification.r
rstudio/iris-classification/: README.md
serving/kserve-keda-autoscaling/: README.md  calibrate.py  inference-service.yaml  load-generator.py  scaled-object.yaml
serving/minimal-custom-kserve-predictor/: inference-service.yaml
serving/minimal-example-shadow-deployment/: README.md  doubler-inference-service.yaml  postgres-cluster.yaml  tripler-inference-service.yaml
serving/minimal-mlflow-model-inference/: test_inference_service.py
serving/minimal-s3-model/: README.md  minimal-s3-model.ipynb
serving/mlflow-kserve-inference-protocols/: inference_protocol_version_example.ipynb  v1-InferenceService.yaml  (+2 more)
(+17 files in other folders)
