[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["hsteude <henrik.steude@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14.1 || >3.14.1,<3.15"
torch = "^2.11.0"
pytorch-lightning = "^2.6.1"
torchvision = "^0.26.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
nbstripout = "^0.6.1"
interactive = "^1.0.1"
tensorboard = "^2.15.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
