[project]
name = "mnist-vae"
version = "0.1.0"
description = ""
authors = [{ name = "hsteude", email = "henrik.steude@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11.0",
    "pytorch-lightning>=2.6.1",
    "torchvision>=0.26.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.2",
    "nbstripout>=0.6.1",
    "interactive>=1.0.1",
    "tensorboard>=2.15.1",
    "click>=8.1.7",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pdbpp>=0.10.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
